# popcon

./: Authors.md  Cargo.toml  Readme.md  default.nix  pass_smt.pm  shell.nix
assets/: bug_dsharp_mc.cnf  bug_more_models_search_space.smt2  choose_interval.smt2  choose_interval_bv1.smt2  choose_interval_projection.smt2  d4_false.cnf  d4_popconbug.cnf  fails_with_rwl2.smt2  halfadder.aag  interval.aag  interval.smt2  large_answer.smt2  or.aag  simple.cnf  simplified_vars.smt2  simplify_regression.cnf  slice_elimination.smt2  wrong_sort.smt2
bench/: read.py  run.py
bench/compare/: 16.smt2  24.smt2  32.smt2  40.smt2  48.smt2  56.smt2  8.smt2
bench/crc32b/: 16.smt2  24.smt2  32.smt2  40.smt2  48.smt2  8.smt2
bench/crc32b_restricted/: 16.smt2  24.smt2  32.smt2  40.smt2  48.smt2
bench/ip_checksum/: 16.smt2  32.smt2  48.smt2  64.smt2
bench/password/: 16.smt2  24.smt2  32.smt2  40.smt2  80.smt2
bench/verify_pin/: 16.smt2  24.smt2  32.smt2
nix/: Cargo.nix  baxmc.nix  c2d.nix  dc-ssat.nix  maxcount-prctl.patch  maxcount.nix  pkgs.nix  popcon.nix  query-dnnf.nix  sources.json  ssatABC.nix  ssatABC_gmp.patch  ssatABC_loop.patch
nix/d4/: default.nix  fix_dnnf_output.patch  nvars.patch  prio.patch
nix/dsharp/: default.nix  unsat_nvars.patch
src/: aig2cnf.rs  baxmc.rs  bb.rs  bitblast.rs  c2d.rs  cnf.rs  d4.rs  dcssat.rs  ddnnf.rs  dsharp.rs  input.rs  lib.rs  main.rs  maxcount.rs  model.rs  smt.rs  ssatabc.rs  stats.rs  utils.rs
