[package]
name = "popcon"
version = "0.1.1"
authors = ["Guillaume Girol", "Guilhem Lacombe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
varisat-formula = "0.2.2"
varisat-dimacs = "0.2.2"
structopt = "0.3"
nom = "7"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
fixedbitset = "0.3"
tempfile = "3"
nix = "0.20"
nc = ">=0.7, <=0.7.10"
prctl = "1"
aiger = "0.2"
smt2parser = "0.1"
timer = "0.2"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
petgraph = "0.6"
tracing-tracy = { version = "0.7", optional = true }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
itertools = "0.10"

[dev-dependencies]
rand = "0.8"


[profile.test]
opt-level = 3

[profile.release]
debug = true

[features]
tracy = [ "tracing-tracy" ]
